--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,10 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "id": "70f4f710",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'Bio'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [23]\u001b[0m, in \u001b[0;36m<cell line: 7>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mre\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrequests\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mrequests\u001b[39;00m\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mBio\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Entrez\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mBio\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m SeqIO\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'Bio'"
+     ]
+    }
+   ],
    "source": [
     "import seaborn as sns\n",
     "import pandas as pd\n",
@@ -19,16 +31,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb534f97",
+   "id": "1680e515",
    "metadata": {},
    "source": [
     "# Мини таск 1\n",
-    "### 1. Очистить и преобразовать числовые параметры, в том числе таргетную величину Kd, из строкового типа данных в числовой тип. Удаление лишних символов, конвертацию в правильный числовой формат и приведение значений к единому виду."
+    "### 1. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 72,
    "id": "7081f7e4",
    "metadata": {},
    "outputs": [
@@ -290,7 +302,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "id": "4351fcbc",
    "metadata": {},
    "outputs": [
@@ -314,7 +326,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 1495 entries, 0 to 1494\n",
-      "Data columns (total 28 columns):\n",
+      "Data columns (total 27 columns):\n",
       " #   Column                                                                                   Non-Null Count  Dtype  \n",
       "---  ------                                                                                   --------------  -----  \n",
       " 0   year_of_paper                                                                            1495 non-null   int64  \n",
@@ -324,31 +336,28 @@
       " 4   citation                                                                                 1495 non-null   object \n",
       " 5   type_of_nucleic_acid                                                                     1495 non-null   object \n",
       " 6   name_of_aptamer                                                                          1495 non-null   object \n",
-      " 7   target_                                                                                  1495 non-null   object \n",
+      " 7   target                                                                                   1495 non-null   object \n",
       " 8   aptamer_sequence                                                                         1495 non-null   object \n",
       " 9   sequence_length                                                                          1495 non-null   int64  \n",
-      " 10  gc_content_                                                                              1495 non-null   float64\n",
+      " 10  gc_content                                                                               1495 non-null   float64\n",
       " 11  affinity                                                                                 1495 non-null   object \n",
-      " 12  kd_(nm)                                                                                  1113 non-null   object \n",
+      " 12  kd_(nm)                                                                                  1112 non-null   float64\n",
       " 13  pool_type                                                                                1495 non-null   object \n",
-      " 14  pool_random_region_                                                                      1484 non-null   object \n",
+      " 14  pool_random_region                                                                       1484 non-null   object \n",
       " 15  binding_buffer/conditions                                                                1495 non-null   object \n",
-      " 16  divalent_salt_                                                                           1495 non-null   object \n",
+      " 16  divalent_salt                                                                            1495 non-null   object \n",
       " 17  type_of_the_buffer                                                                       1492 non-null   object \n",
       " 18  ph                                                                                       1362 non-null   float64\n",
       " 19  molecular_weight_of_target                                                               1495 non-null   object \n",
       " 20  application_as_quoted_in_the_referenced_paper                                            1495 non-null   object \n",
       " 21  post-selex_modifications_to_the_aptamer                                                  1301 non-null   object \n",
-      " 22  additional_information\n",
-      "\n",
-      "                                                                 630 non-null    object \n",
+      " 22  additional_information                                                                   630 non-null    object \n",
       " 23  serial_number                                                                            1495 non-null   int64  \n",
       " 24  parent_sequence_serial_number                                                            12 non-null     object \n",
       " 25  corresponding_author_name_email_address                                                  1494 non-null   object \n",
-      " 26  please_fill_out_the_form_for_any_feedbacks/comments                                      1495 non-null   object \n",
-      " 27  aptagen_cross_referencing(check__aptamer_chemistry_affinity_length_gc_content_sequence)  90 non-null     object \n",
-      "dtypes: float64(2), int64(3), object(23)\n",
-      "memory usage: 327.2+ KB\n"
+      " 26  aptagen_cross_referencing(check__aptamer_chemistry_affinity_length_gc_content_sequence)  90 non-null     object \n",
+      "dtypes: float64(3), int64(3), object(21)\n",
+      "memory usage: 315.5+ KB\n"
      ]
     }
    ],
@@ -358,17 +367,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "42593f81",
+   "execution_count": 78,
+   "id": "74ca06c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "year_of_paper                                                                                 0\n",
+       "link_to_pubmed_entry                                                                          0\n",
+       "journals                                                                                      0\n",
+       "journal_doi                                                                                   0\n",
+       "citation                                                                                      0\n",
+       "type_of_nucleic_acid                                                                          0\n",
+       "name_of_aptamer                                                                               0\n",
+       "target                                                                                        0\n",
+       "aptamer_sequence                                                                              0\n",
+       "sequence_length                                                                               0\n",
+       "gc_content                                                                                    0\n",
+       "affinity                                                                                      0\n",
+       "kd_(nm)                                                                                     382\n",
+       "pool_type                                                                                     0\n",
+       "pool_random_region                                                                           11\n",
+       "binding_buffer/conditions                                                                     0\n",
+       "divalent_salt                                                                                 0\n",
+       "type_of_the_buffer                                                                            3\n",
+       "ph                                                                                          133\n",
+       "molecular_weight_of_target                                                                    0\n",
+       "application_as_quoted_in_the_referenced_paper                                                 0\n",
+       "post-selex_modifications_to_the_aptamer                                                     194\n",
+       "additional_information                                                                      865\n",
+       "serial_number                                                                                 0\n",
+       "parent_sequence_serial_number                                                              1483\n",
+       "corresponding_author_name_email_address                                                       1\n",
+       "please_fill_out_the_form_for_any_feedbacks/comments                                           0\n",
+       "aptagen_cross_referencing(check__aptamer_chemistry_affinity_length_gc_content_sequence)    1405\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "5d270e9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop('please_fill_out_the_form_for_any_feedbacks/comments', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "8337820b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 98.,  97.,   9.,  60.,  32.,  30.,  10.,  15.,  nan,  72.,  20.,\n",
+       "        40.,  74., 120.,  35.,  76.,  71.,  25.,  14.,  12.,  80.,  70.,\n",
+       "        50.,   3.,  22.,  47.,  21.,  51.,  59.,  61.,  26.,  49.,  41.,\n",
+       "        52.,  58.,  64.,  16.,  34.,  24.,  36.,  56.,  45.,  55.,  39.,\n",
+       "        23.,  53.,  33.,  43.,  19.,  38.,  31.,  42.,  44.,   0.,  62.])"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['pool_random_region'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "ead4351e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['pool_random_region'].replace('TBD', np.nan, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "14089fb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['divalent_salt'] = df['divalent_salt'].str.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "ed1a3a8e",
    "metadata": {},
    "outputs": [],
    "source": [
     "def to_numeric(column):\n",
     "    return pd.to_numeric(df[column], errors='coerce')\n",
     "\n",
-    "df['Kd (nM)'] = to_numeric('Kd (nM)')\n",
-    "df['Sequence Length'] = to_numeric('Sequence Length')\n",
-    "df['GC Content'] = to_numeric('GC Content')"
+    "df['kd_(nm)'] = to_numeric('kd_(nm)')\n",
+    "df['sequence_length'] = to_numeric('sequence_length')\n",
+    "df['gc_content'] = to_numeric('gc_content')\n",
+    "df['pool_random_region'] = to_numeric('pool_random_region')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "96790eed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.iloc[406, df.columns.get_loc('kd_(nm)')] = 100000\n",
+    "df.iloc[407, df.columns.get_loc('kd_(nm)')] = 10000000\n",
+    "df.iloc[1480, df.columns.get_loc('kd_(nm)')] = 23\n",
+    "df.iloc[441, df.columns.get_loc('kd_(nm)')] = 1000"
    ]
   },
   {
@@ -704,16 +831,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f1c1043",
+   "id": "5ca2d00c",
    "metadata": {},
    "source": [
-    "### 3. Для малых молекул преобразовать названия в SMILES-представление, а для белковых мишеней - в последовательность аминокислот. Дополнить датафрейм этой информацией. "
+    "### 3. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca0131bf",
+   "id": "aba8f5cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9703c58e",
+   "id": "37454539",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,7 +884,7 @@
     "        lastseq=None\n",
     "        return None\n",
     "\n",
-    "df['sequence_of_the_target_protein'] = df['Target'].apply(fetch_protein_sequence)"
+    "df['sequence_of_the_target_protein'] = df['target'].apply(fetch_protein_sequence)"
    ]
   },
   {
@@ -884,7 +1011,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "95246ecf",
+   "id": "60f8bfd7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,12 +1021,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87529433",
+   "id": "03c23d26",
    "metadata": {},
    "outputs": [],
    "source": [
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5934cc7b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
